# font-awl

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
scripts/: download-fonts.sh
src/: error.rs  lib.rs
src/platform/: android.rs  bundled.rs  mod.rs  web.rs
