[package]
name = "font-awl"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Cross-platform font provider for Rust, wrapping fontique + parley"
repository = "https://github.com/mlm-games/font-awl"
readme = "README.md"

[features]
default = ["std", "parley", "system", "fontconfig-dlopen"]
std = ["fontique/std", "parley?/std"]
system = ["std", "fontique/system", "parley?/system"]
parley = ["dep:parley"]
fontconfig-dlopen = ["fontique/fontconfig-dlopen"]
basic = []
emoji = []
cjk = []
monospace = []
all-noto = ["basic", "emoji", "cjk"]

[dependencies]
fontique = { version = "0.11", default-features = false, features = ["std"] }
parley = { version = "0.11", optional = true, default-features = false, features = [
    "std",
] }
thiserror = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "FontData", "Blob"] }

[target.'cfg(target_os = "android")'.dependencies]
libloading = "0.9"

[package.metadata.docs.rs]
features = ["parley", "basic", "emoji", "system"]
rustdoc-args = ["--cfg", "docsrs"]
